watson sents POST request and receives JSON response!

--- a/AngularPythonTwitterSearch/app/templates/app/index.html
+++ b/AngularPythonTwitterSearch/app/templates/app/index.html
@@ -8,8 +8,21 @@
         <searchform></searchform>
     </div>     
 
-<div class="row" ng-repeat="tweet in tweets">
+{% for tweet in tweets %}
+<div class="row">
     <p>{{tweet.text}}</p>
 </div>
+{% endfor %}
+
+{% for score in scores %}
+<div class="row">
+    <p>score: {{score}}</p>
+</div>
+{% endfor %}
+
+
+<footer>
+    <p>Sentement Analysis provided by <a href="http://www.alchemyapi.com/">AlchemyAPI</a></p>
+</footer>
 
 {% endblock %}
