--- a/AngularPythonTwitterSearch/app/static/app/content/site.css
+++ b/AngularPythonTwitterSearch/app/static/app/content/site.css
@@ -1,4 +1,37 @@
-﻿body {
+﻿.footer-content {
+    text-align: center !important;
+}
+
+.form-content {
+    text-align: center !important;
+    width:280px;
+
+    margin-right: auto;
+    margin-left: auto;
+}
+
+.form-control {
+    text-align: center !important;
+}
+
+.link {
+    margin-left: 1em !important;
+    margin-right: 1em !important;
+}
+
+h1, h2, h3 {
+    font-family: 'Lobster', cursive;
+}
+
+h1 {
+    font-size: 48px;
+}
+
+.header-content {
+    text-align: center !important;
+}
+
+body {
     padding-top: 50px;
     padding-bottom: 20px;
 }
