--- a/AngularPythonTwitterSearch/app/static/app/content/site.css
+++ b/AngularPythonTwitterSearch/app/static/app/content/site.css
@@ -1,12 +1,12 @@
 ﻿@media (min-width: 1200px) {
     .tweet-content {
-        height: 125px;
+        height: 140px;
     }
 }
 
 @media (min-width: 992px) and (max-width: 1199px) {
     .tweet-content {
-        height: 150px;
+        height: 160px;
     }
 }
 
@@ -37,6 +37,12 @@ h1, h2, h3 {
 
 h1 {
     font-size: 48px;
+}
+
+@media (max-width: 991px) {
+    h1 {
+      font-size: 36px;  
+    }
 }
 
 .header-content {
